# mycli-click

./: cli.py  pyproject.toml  test.py
mycli/: README.md  cmd.py  project.py  supercli.py
tests/: test_mycli.py
