[tool.poetry]
name = "mycli"
version = "0.1.0"
description = ""
authors = ["Roberto Barbosa <rnrbarbosa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
rich = "^12.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
af = "mycli.supercli:af"
Af = "mycli.supercli:af"
